[package]
name = "circuitsim-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Graphical interface for RSpice"

[[bin]]
name = "circuitsim-gui"
path = "src/main.rs"

[dependencies]
circuitsim = { path = "../circuitsim" }
eframe = { version = "0.29", default-features = true }
egui = "0.29"
egui_plot = "0.29"
rfd = "0.15"
